# planetGen

./: .gitignore  AUTHORS  Makefile.am  README.md  configure.ac  planetGenScript
src/: Bitmap.cpp  Bitmap.h  PhysicalData.cpp  PhysicalData.h  Surface.cpp  Surface.h  UserSettings.cpp  UserSettings.h  main.cpp
